[gd_scene load_steps=5 format=2]

[ext_resource path="res://Enemies/Sprites/flying_car.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Scripts/TrafficCar.gd" type="Script" id=2]
[ext_resource path="res://Enemies/Sounds/Traffic/honk_sound.mp3" type="AudioStream" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 8.0
height = 8.0

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
rotation = -1.5708
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="ShotTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, 1 )

[node name="Honk" type="AudioStreamPlayer2D" parent="."]
pause_mode = 1
stream = ExtResource( 3 )
volume_db = -7.0

[connection signal="timeout" from="ShotTimer" to="." method="_on_ShotTimer_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
